@@ -58,6 +58,7 @@ Included
 - Binary OID hint counts added for CMS signedData and timestamp EKU indicators.
 - Explicit signature route now requires real envelope/OID/DER evidence; text-only timestamp/chain hints no longer satisfy strict signature validity checks.
 - Explicit signature route now rejects tiny generic DER blobs as insufficient strict signature evidence.
+- Generic DER fallback in strict signature mode is now limited to certificate extensions (`.cer/.crt`), so `.sig` requires explicit signature-envelope/OID evidence.
 - SCM/source evidence adapter extraction deepened:
 - Deterministic repo counters now include tree entry count, branch/tag ref counts, detached HEAD indicator, and working-tree entry count.
 - SCM adapter now emits deterministic worktree state evidence (staged/unstaged/untracked counts) and `SCM_WORKTREE_DIRTY` when local repo state is dirty.
